
add_library(MesaGL STATIC accum.c alpha.c alphabuf.c api.c attrib.c bitmap.c 
		    blend.c bresenhm.c clip.c context.c copypix.c depth.c 
		    dlist.c draw.c drawpix.c enable.c eval.c feedback.c fog.c 
		    get.c interp.c image.c light.c lines.c logic.c 
		    masking.c matrix.c misc.c pb.c pixel.c points.c pointers.c 
		    polygon.c readpix.c scissor.c span.c stencil.c teximage.c 
		    texobj.c texture.c triangle.c varray.c vb.c vertex.c winpos.c 
		    xform.c osmesa.c)

